--- a/ReadMe
+++ b/ReadMe
@@ -1,2 +1,2 @@
 # BinaryCalc
-A binary calculator
+A binary calculator made as part of my JavaScript course at HackerRank, with a few modifications to make it more useable in my opinion.
